--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="video-info">
                         <h3>Navratri special: How Ramanujan’s Devi gave black hole theory | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>How social media fuels useless products</h3>
                         <div class="channel">Matt D'Avella</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7257,7 +7257,7 @@
                         <div class="video-info">
                             <h3>Navratri special: How Ramanujan’s Devi gave black hole theory | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8242,7 +8242,7 @@
                         <div class="video-info">
                             <h3>How social media fuels useless products</h3>
                             <div class="channel">Matt D'Avella</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
