--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -158,7 +158,7 @@
                     <div class="video-info">
                         <h3>Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -180,7 +180,7 @@
                     <div class="video-info">
                         <h3>Forex Carry Trade Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Practical Spirituality - Learning to Handle Life</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>How Many Winning Trades Do You Need?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -347,7 +347,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -358,7 +358,7 @@
                     <div class="video-info">
                         <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5089,7 +5089,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5100,7 +5100,7 @@
                         <div class="video-info">
                             <h3>Coding a Forex Factory News Filter for the5ers Prop Firm Expert Advisor</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5111,7 +5111,7 @@
                         <div class="video-info">
                             <h3>Forex Carry Trade Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5122,7 +5122,7 @@
                         <div class="video-info">
                             <h3>How Many Winning Trades Do You Need?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5201,7 +5201,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7279,7 +7279,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Practical Spirituality - Learning to Handle Life</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7334,7 +7334,7 @@
                         <div class="video-info">
                             <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
