--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="video-info">
                         <h3>Vijayadashami – A Day of Victory | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -158,7 +158,7 @@
                     <div class="video-info">
                         <h3>The Meditator's Mistake, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -180,7 +180,7 @@
                     <div class="video-info">
                         <h3>Navratri special: How Ramanujan’s Devi gave black hole theory | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7246,7 +7246,7 @@
                         <div class="video-info">
                             <h3>Vijayadashami – A Day of Victory | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7257,7 +7257,7 @@
                         <div class="video-info">
                             <h3>The Meditator's Mistake, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7268,7 +7268,7 @@
                         <div class="video-info">
                             <h3>Navratri special: How Ramanujan’s Devi gave black hole theory | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7290,7 +7290,7 @@
                         <div class="video-info">
                             <h3>Human Beings Have Only One Problem | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
